[package]
name = "mersenne_twister"
version = "1.1.1"
authors = ["David Creswick <dcrewi@gyrae.net>"]
license = "MIT/Apache-2.0"
description = "Mersenne Twister pseudorandom number generator"
repository = "https://github.com/dcrewi/rust-mersenne-twister"
documentation = "https://docs.rs/mersenne_twister/"
readme = "README.md"
keywords = ["random", "rand", "rng", "algorithm", "mersenne"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]
edition = "2018"

[dependencies]
rand_core = ">=0.5"
rand = {version = ">=0.7", features = ["small_rng"]}

[badges]
travis-ci = { repository = "dcrewi/rust-mersenne-twister" }
maintenance = { status = "passively-maintained" }
